Improve frontend  * create form to invite candidates  * create list of defined challenges for current company  * create page to display details of a challenge  * create mechanism for handling errors

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -119,6 +119,16 @@ paper-menu a {
   height: 100%;
 }
 
+.link{
+  padding: 5px 10px 5px 0;
+  cursor: pointer;
+  margin: 5px 5px 5px 0 ;
+}
+
+.link:hover{
+  background-color: rgba(1, 218, 255, 0.1);
+}
+
 /* Breakpoints */
 
 /* Small */
