--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,6 +7,14 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 */
 
+
+/* Custom styles*/
+.colorful{
+  background: #4285f4;
+  color: #fff;
+}
+
+/* Bootstrapped */
 body {
   background: #fafafa;
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -57,11 +65,11 @@ paper-header-panel #mainContainer{
     height: 100%;
 }
 
-paper-material {
+.card {
   border-radius: 2px;
-  padding: 16px 0 16px 0;
+  padding: 16px 16px 16px 16px;
   width: calc(98.66% - 16px);
-  margin: 16px auto;
+  margin: auto;
   background: white;
 }
 
@@ -165,13 +173,6 @@ paper-menu a {
 
 /* Tablet+ */
 @media (min-width: 601px) {
-
-  paper-material {
-    width: calc(98% - 46px);
-    margin-bottom: 32px;
-    padding-left: 30px;
-    padding-right: 30px;
-  }
 
   #drawer.paper-drawer-panel > [drawer] {
     border-right: 1px solid rgba(0, 0, 0, 0.14);
