--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -14,6 +14,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   color: #fff;
 }
 
+.invertcolorful{
+  color: #4285f4;
+}
 /* Bootstrapped */
 body {
   background: #fafafa;
