--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,73 +1,3 @@
-/*
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
-*/
-
-
-/* Custom styles*/
-.colorful{
-  background: #4285f4;
-  color: #fff;
-}
-
-.invertcolorful{
-  color: #4285f4;
-}
-/* Bootstrapped */
-body {
-  background: #fafafa;
-  font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #333;
-  height: 100%;
-}
-:root {
-  height: 100%;
-  --dark-primary-color: #303F9F;
-  --default-primary-color: #3F51B5;
-  --light-primary-color: #C5CAE9;
-  --text-primary-color: #ffffff; /*text/icons*/
-  --accent-color: #FF4081;
-  --primary-background-color: #c5cae9;
-  --primary-text-color: #212121;
-  --secondary-text-color: #727272;
-  --disabled-text-color: #bdbdbd;
-  --divider-color: #B6B6B6;
-
-  /* Components */
-
-  /* paper-drawer-panel */
-  --drawer-menu-color: #ffffff;
-  --drawer-border-color: 1px solid #ccc;
-  --drawer-toolbar-border-color: 1px solid rgba(0, 0, 0, 0.22);
-
-  /* paper-menu */
-  --paper-menu-background-color: #fff;
-  --menu-link-color: #111111;
-}
-
-/* General styles */
-
-.header{
-  font-size: 3.2vh;
-  text-align: center !important;
-  height: 6.5% !important;
-}
-
-#drawerToolbar {
-  color: var(--secondary-text-color);
-  background-color: var(--drawer-menu-color);
-  border-bottom: var(--drawer-toolbar-border-color);
-  height: 64px;
-}
-
-paper-header-panel #mainContainer{
-    height: 100%;
-}
-
 .card {
   border-radius: 2px;
   padding: 16px 16px 16px 16px;
@@ -76,18 +6,11 @@ paper-header-panel #mainContainer{
   background: white;
 }
 
-paper-menu iron-icon {
-  margin-right: 33px;
-  opacity: 0.54;
+#drawer{
+  background-color:  #e4e7e7;
 }
-
-.paper-menu > .iron-selected {
-  color: var(--default-primary-color);
-}
-
 paper-menu a {
   text-decoration: none;
-  color: var(--menu-link-color);
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
@@ -103,127 +26,6 @@ paper-menu a {
   font-size: 14px;
   font-weight: 400;
   line-height: 24px;
-  min-height: 48px;
+  min-height: 40px;
   padding: 0 16px;
 }
-
-#mainToolbar .middle {
-  margin-left: 48px;
-}
-
-#mainToolbar.has-shadow .middle {
-  font-size: 20px;
-  padding-bottom: 0;
-  margin-left: 48px;
-}
-
-/* Height of the scroll area */
-.content {
-  height: 93.5%;
-}
-
-.content iron-pages{
-  height: 100%;
-}
-
-.content iron-pages section{
-  height: 100%;
-}
-
-.link{
-  padding: 5px 10px 5px 0;
-  cursor: pointer;
-  margin: 5px 5px 5px 0 ;
-}
-
-.link:hover{
-  background-color: rgba(1, 218, 255, 0.1);
-}
-
-/* Breakpoints */
-
-/* Small */
-@media (max-width: 600px) {
-
-  paper-material {
-    --menu-container-display: none;
-    width: calc(97.33% - 32px);
-    padding-left: 16px;
-    padding-right: 16px;
-  }
-
-  .paper-font-display1 {
-    font-size: 12px;
-  }
-
-  .app-name {
-    font-size: 26px;
-  }
-
-  #drawer .paper-toolbar {
-    margin-left: 16px;
-  }
-
-  #overlay {
-    min-width: 360px;
-  }
-
-  .bg {
-    background: white;
-  }
-
-}
-
-/* Tablet+ */
-@media (min-width: 601px) {
-
-  #drawer.paper-drawer-panel > [drawer] {
-    border-right: 1px solid rgba(0, 0, 0, 0.14);
-  }
-
-  iron-pages {
-  }
-
-}
-
-/* Material Design Adaptive Breakpoints */
-/*
-  Below you'll find CSS media queries based on the breakpoint guidance
-  published by the Material Design team. You can choose to use, customise
-  or remove these breakpoints based on your needs.
-
-  http://www.google.com/design/spec/layout/adaptive-ui.html#adaptive-ui-breakpoints
- */
-
-/* mobile-small */
-@media all and (min-width: 0) and (max-width: 360px) and (orientation: portrait) { }
-/* mobile-large */
-@media all and (min-width: 361px) and (orientation: portrait) { }
-/* mobile-small-landscape */
-@media all and (min-width: 0) and (max-width: 480px) and (orientation: landscape) { }
-/* mobile-large-landscape */
-@media all and (min-width: 481px) and (orientation: landscape) { }
-/* tablet-small-landscape */
-@media all and (min-width: 600px) and (max-width: 960px) and (orientation: landscape) { }
-/* tablet-large-landscape */
-@media all and (min-width: 961px) and (orientation: landscape) { }
-/* tablet-small */
-@media all and (min-width: 600px) and (orientation: portrait) { }
-/* tablet-large */
-@media all and (min-width: 601px) and (max-width: 840px) and (orientation : portrait) { }
-/* desktop-x-small-landscape */
-@media all and (min-width: 0) and (max-width: 480px) and (orientation: landscape) { }
-/* desktop-x-small */
-@media all and (min-width: 0) and (max-width: 480px) and (max-aspect-ratio: 4/3) { }
-/* desktop-small-landscape */
-@media all and (min-width: 481px) and (max-width: 840px) and (orientation: landscape) { }
-/* desktop-small */
-@media all and (min-width: 481px) and (max-width: 840px) and (max-aspect-ratio: 4/3) { }
-/* desktop-medium-landscape */
-@media all and (min-width: 841px) and (max-width: 1280px) and (orientation: landscape) { }
-/* desktop-medium */
-@media all and (min-width: 841px) and (max-width: 1280px) and (max-aspect-ratio: 4/3) { }
-/* desktop-large */
-@media all and (min-width: 1281px) and (max-width: 1600px) { }
-/* desktop-xlarge */
-@media all and (min-width: 1601px) and (max-width: 1920px) { }
