--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,9 +6,10 @@
 	background: white;
 }
 
-#drawer{
+#drawer {
 	background-color: #e4e7e7;
 }
+
 paper-menu a {
 	text-decoration: none;
 	display: -ms-flexbox;
@@ -30,23 +31,33 @@ paper-menu a {
 	padding: 0 16px;
 }
 
-.tab-content.paper-tab>a {
+.tab-content.paper-tab > a {
 	height: 40%;
 	text-decoration: none;
 }
 
-#bottomTabs{
+#bottomTabs {
 	background-color: #4B4F62;
 }
 
-paper-toolbar>div{
+paper-toolbar > div {
 	padding-bottom: 5px;
 }
 
-paper-toolbar>paper-icon-button{
+paper-toolbar > paper-icon-button {
 	padding-bottom: 13px;
 }
 
-paper-toolbar>paper-menu-button{
+paper-toolbar > paper-menu-button {
 	padding-bottom: 13px;
+}
+
+.link {
+	padding: 5px 10px 5px 0;
+	cursor: pointer;
+	margin: 5px 5px 5px 0;
+}
+
+.link:hover {
+	background-color: rgba(228, 228, 228, 0.64)
 }
