--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,31 +1,52 @@
 .card {
-  border-radius: 2px;
-  padding: 16px 16px 16px 16px;
-  width: calc(98.66% - 16px);
-  margin: auto;
-  background: white;
+	border-radius: 2px;
+	padding: 16px 16px 16px 16px;
+	width: calc(98.66% - 16px);
+	margin: auto;
+	background: white;
 }
 
 #drawer{
-  background-color:  #e4e7e7;
+	background-color: #e4e7e7;
 }
 paper-menu a {
-  text-decoration: none;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -ms-flex-direction: row;
-  -webkit-flex-direction: row;
-  flex-direction: row;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  font-family: 'Roboto', 'Noto', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 24px;
-  min-height: 40px;
-  padding: 0 16px;
+	text-decoration: none;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-ms-flex-direction: row;
+	-webkit-flex-direction: row;
+	flex-direction: row;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	align-items: center;
+	font-family: 'Roboto', 'Noto', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	text-rendering: optimizeLegibility;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 24px;
+	min-height: 40px;
+	padding: 0 16px;
+}
+
+.tab-content.paper-tab>a {
+	height: 40%;
+	text-decoration: none;
+}
+
+#bottomTabs{
+	background-color: #4B4F62;
+}
+
+paper-toolbar>div{
+	padding-bottom: 5px;
+}
+
+paper-toolbar>paper-icon-button{
+	padding-bottom: 13px;
+}
+
+paper-toolbar>paper-menu-button{
+	padding-bottom: 13px;
 }
