--- a/app/styles/technology.css
+++ b/app/styles/technology.css
@@ -9,16 +9,13 @@ html, body {
   margin: 0px;
   padding: 0px;
   min-height: 100%;
+  height: 100%;
   color: #444444;
   background-color: #e5e5e5;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
 }
 
-section {
-  padding: 40px 0px;
-  text-align: center;
-}
 section[hero] {
   background-color: #f2f7fa;
 }
@@ -39,7 +36,7 @@ h1, h3, h5 {
 
 h1 {
   font-size: 50px;
-  margin: 30px 0px;
+  margin: 0px;
 }
 
 h2 {
