--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,6 +7,12 @@
 	text-align: left;
 }
 
+.mainContent {
+	width: 70%;
+	margin-left: 15%;
+	margin-right: 15%;
+}
+
 #drawer {
 	background-color: #e4e7e7;
 }
