Fix syntax errors

--- a/app/elements/company/challenge/template/challenge-template-detail.html
+++ b/app/elements/company/challenge/template/challenge-template-detail.html
@@ -162,7 +162,7 @@
 				return [challengeTemplate];
 			},
 			_createChallenge: function(){
-				page('/challenge/template/'+ this.challengeTemplate.id + '/create')
+				page('/challenge/template/'+ this.challengeTemplate.id + '/create');
 			}
 		});
 	</script>
