use unexposed tasks

--- a/app/elements/company/challenge/template/challenge-template-detail.html
+++ b/app/elements/company/challenge/template/challenge-template-detail.html
@@ -93,7 +93,7 @@
 			</paper-material>
 			<div class="grid-row horizontal layout wrap">
 				<template is="dom-repeat" items="{{challengeTemplate.tasks}}">
-					<task-card task="{{item}}" no-select></task-card>
+					<task-card task-id="{{item}}" no-select></task-card>
 				</template>
 			</div>
 		</div>
