--- a/app/styles/coduno.css
+++ b/app/styles/coduno.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway:700|Open+Sans");
 html { -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; font-size: 16px; }
 
-html, body { margin: 0px; padding: 0px; min-height: 100%; color: #2d2d2d; background-color: #fafafa; font-family: 'Open Sans', sans-serif; font-weight: 400; }
+html, body { margin: 0px; padding: 0px; min-height: 100%; color: #2d2d2d; background-color: #e5e5e5; font-family: 'Open Sans', sans-serif; font-weight: 400; }
 
 section { padding: 40px 0px; }
 section[hero] { background-color: #f3f3f3; }
@@ -21,8 +21,6 @@ h4 { font-size: 20px; }
 a, a:active, a:visited, a:focus { color: #c7216e; text-decoration: none; }
 
 a:hover { color: #c7216e; text-decoration: underline; }
-
-:root { --default-primary-color: #446e9b; --dark-primary-color: #e7e7e7; --light-primary-color: #c5cae9; --text-primary-color: #ffffff; --accent-color: #ff4081; --primary-background-color: #ffffff; --primary-text-color: #2d2d2d; --secondary-text-color: #2b2661; --disabled-text-color: #313238; --divider-color: #e0e0e0; --paper-checkbox-checked-color: #524fa3; --paper-checkbox-checked-ink-color: #446e9b; --paper-checkbox-unchecked-color: #2b2661; --paper-checkbox-unchecked-ink-color: #777777; --paper-checkbox-label-color: #2d2d2d; --paper-fab-background: #446e9b; --paper-fab-disabled-background: #afb1b9; --paper-fab-disabled-text: #313238; --paper-icon-button-disabled-text: #afb1b9; --paper-input-container-color: #7a7a7a; --paper-input-container-focus-color: #446e9b; --paper-input-container-invalid-color: #ff6e40; --paper-input-container-input-color: #7a7a7a; --paper-menu-background-color: #f3f3f3; --paper-menu-color: #2d2d2d; --paper-menu-disabled-color: #afb1b9; --paper-progress-active-color: #524fa3; --paper-progress-secondary-color: #abe3fd; --paper-radio-button-checked-color: #524fa3; --paper-radio-button-checked-ink-color: white; --paper-radio-button-unchecked-color: #2d2d2d; --paper-radio-button-unchecked-ink-color: #2d2d2d; --paper-radio-button-label-color: #2d2d2d; --paper-slider-knob-color: #c7216e; --paper-slider-active-color: #14b2e6; --paper-slider-pin-color: #524fa3; --paper-spinner-layer-1-color: #524fa3; --paper-spinner-layer-2-color: #524fa3; --paper-spinner-layer-3-color: #524fa3; --paper-spinner-layer-4-color: #524fa3; --paper-tabs-selection-bar-color: #c7216e; --paper-tab-ink: #c7216e; --paper-toggle-button-checked-bar-color: #524fa3; --paper-toggle-button-checked-button-color: #524fa3; --paper-toggle-button-checked-ink-color: #524fa3; --paper-toggle-button-unchecked-bar-color: #2b2661; --paper-toggle-button-unchecked-button-color: white; --paper-toggle-button-unchecked-ink-color: white; --paper-toolbar-background: #fafafa; --paper-toolbar-color: #2b2661; }
 
 paper-toolbar a, paper-toolbar a:hover, paper-toolbar a:active, paper-toolbar a:visited, paper-toolbar a:focus { color: #2b2661; }
 
