--- a/app/elements/common/data-providers/challenge/template/challenge-templates-for-active-organization-provider.html
+++ b/app/elements/common/data-providers/challenge/template/challenge-templates-for-active-organization-provider.html
@@ -10,8 +10,8 @@
 			method="GET"
 			url="[[baseUrl]]/challenges/templates?organization=[[organization]]"
 			handle-as="json"
-			last-response="{{data}}"
-			with-credentials="true">
+			with-credentials="true"
+			bubbles>
 		</iron-ajax>
 	</template>
 	<script type="application/javascript" src="../../../../../scripts/behaviors/providers/general-provider-behavior.js"></script>
@@ -28,6 +28,7 @@
 				this.refresh();
 			},
 			refresh: function(){
+				console.log('doing request');
 				this.organization = localStorage.activeOrganization;
 				this.$.request.generateRequest();
 			}
