--- a/app/elements/common/data-providers/challenge/template/challenge-template-by-canonical-name-provider.html
+++ b/app/elements/common/data-providers/challenge/template/challenge-template-by-canonical-name-provider.html
@@ -1,4 +1,4 @@
-<dom-module id="challenge-template-by-id-provider">
+<dom-module id="challenge-template-by-canonical-name-provider">
 	<style>
 		:host {
 			display: none;
@@ -8,7 +8,7 @@
 		<iron-ajax
 			id="request"
 			method="GET"
-			url="[[baseUrl]]/challenges/templates/[[templateId]]"
+			url="[[baseUrl]]/challenge-templates/[[canonicalName]]"
 			handle-as="json"
 			with-credentials="true"
 			bubbles>
@@ -17,12 +17,12 @@
 	<script type="application/javascript" src="../../../../../scripts/behaviors/providers/general-provider-behavior.js"></script>
 	<script>
 		Polymer({
-			is: 'challenge-template-by-id-provider',
+			is: 'challenge-template-by-canonical-name-provider',
 			behaviors: [
 				Behaviors.Providers.General
 			],
 			observers: [
-				'_urlChanged(baseUrl, templateId)'
+				'_urlChanged(baseUrl, canonicalName)'
 			],
 			_urlChanged: function(){
 				this.refresh();
